added uuid for file name in crawler

--- a/project.ipynb
+++ b/project.ipynb
@@ -11,6 +11,7 @@
     "import scrapy\n",
     "from scrapy.crawler import CrawlerProcess\n",
     "from urllib.parse import urlparse\n",
+    "import uuid\n",
     "\n",
     "class Crawler(scrapy.Spider):\n",
     "    name = \"web_crawler\"\n",
@@ -32,11 +33,11 @@
     "\n",
     "        os.makedirs(self.save_dir, exist_ok=True)\n",
     "\n",
-    "        filename = f\"page{self.pages_crawled+1}.html\"\n",
+    "        filename = f\"{uuid.uuid4()}.html\"\n",
     "        filepath = os.path.join(self.save_dir, filename)\n",
     "        with open(filepath, \"wb\") as f:\n",
     "            f.write(response.body)\n",
-    "        print(f\"Saved {filepath} from {response.url}\")\n",
+    "        print(f\"Saved {filename} to folder with {response.url}\")\n",
     "        self.pages_crawled += 1\n",
     "\n",
     "        if self.pages_crawled >= self.max_pages:\n",
