finished inverted index building

--- a/project.ipynb
+++ b/project.ipynb
@@ -52,6 +52,53 @@
     "crawl_process.crawl(Crawler, seed_url='https://crawler-test.com', max_pages=10, max_depth=1, save_dir='downloaded_pages')\n",
     "crawl_process.start()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a44799e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "import json, re, os\n",
+    "\n",
+    "def build_inverted_index(directory: str, output_json: str):\n",
+    "    inverted_index = {}\n",
+    "    documents = []\n",
+    "    document_ids = []\n",
+    "\n",
+    "    for filename in os.listdir(directory):\n",
+    "        if not filename.endswith('.html'):\n",
+    "            continue\n",
+    "        file_path = os.path.join(directory, filename)\n",
+    "        with open(file_path, 'r', errors='ignore') as f:\n",
+    "            html = f.read()\n",
+    "\n",
+    "        soup = BeautifulSoup(html, 'lxml')\n",
+    "        text = soup.get_text(' ', strip=True)\n",
+    "\n",
+    "        documents.append(text)\n",
+    "        document_ids.append(filename)\n",
+    "\n",
+    "        tokens = re.findall(r\"\\b\\w+\\b\", text.lower())\n",
+    "        for position, token in enumerate(tokens):\n",
+    "            if token not in inverted_index:\n",
+    "                inverted_index[token] = []\n",
+    "            if inverted_index[token] and inverted_index[token][-1][0] == filename:\n",
+    "                inverted_index[token][-1][1].append(position)\n",
+    "            else:\n",
+    "                inverted_index[token].append((filename, [position]))\n",
+    "\n",
+    "    with open(output_json, \"w\", encoding=\"utf-8\") as f:\n",
+    "        json.dump(inverted_index, f, indent=1)\n",
+    "\n",
+    "    print(f\"Positional inverted index saved to {output_json}\")\n",
+    "\n",
+    "build_inverted_index('downloaded_pages', 'index.json')\n"
+   ]
   }
  ],
  "metadata": {
