--- a/project.ipynb
+++ b/project.ipynb
@@ -32,8 +32,7 @@
     "            return\n",
     "\n",
     "        os.makedirs(self.save_dir, exist_ok=True)\n",
-    "\n",
-    "        filename = f\"{uuid.uuid4()}.html\"\n",
+    "        filename = f\"{str(uuid.uuid4()).upper()}.html\"\n",
     "        filepath = os.path.join(self.save_dir, filename)\n",
     "        with open(filepath, \"wb\") as f:\n",
     "            f.write(response.body)\n",
@@ -49,7 +48,7 @@
     "                \n",
     "\n",
     "crawl_process = CrawlerProcess()\n",
-    "crawl_process.crawl(Crawler, seed_url='https://crawler-test.com', max_pages=10, max_depth=1, save_dir='downloaded_pages')\n",
+    "crawl_process.crawl(Crawler, seed_url='https://books.toscrape.com', max_pages=15, max_depth=3, save_dir='downloaded_pages')\n",
     "crawl_process.start()\n"
    ]
   },
@@ -61,8 +60,6 @@
    "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
     "import json, re, os\n",
     "\n",
     "def build_inverted_index(directory: str, output_json: str):\n",
@@ -73,6 +70,7 @@
     "    for filename in os.listdir(directory):\n",
     "        if not filename.endswith('.html'):\n",
     "            continue\n",
+    "        doc_id = os.path.splitext(filename)[0]\n",
     "        file_path = os.path.join(directory, filename)\n",
     "        with open(file_path, 'r', errors='ignore') as f:\n",
     "            html = f.read()\n",
@@ -81,24 +79,103 @@
     "        text = soup.get_text(' ', strip=True)\n",
     "\n",
     "        documents.append(text)\n",
-    "        document_ids.append(filename)\n",
+    "        document_ids.append(doc_id)\n",
     "\n",
     "        tokens = re.findall(r\"\\b\\w+\\b\", text.lower())\n",
     "        for position, token in enumerate(tokens):\n",
     "            if token not in inverted_index:\n",
     "                inverted_index[token] = []\n",
-    "            if inverted_index[token] and inverted_index[token][-1][0] == filename:\n",
+    "            if inverted_index[token] and inverted_index[token][-1][0] == doc_id:\n",
     "                inverted_index[token][-1][1].append(position)\n",
     "            else:\n",
-    "                inverted_index[token].append((filename, [position]))\n",
+    "                inverted_index[token].append((doc_id, [position]))\n",
     "\n",
-    "    with open(output_json, \"w\", encoding=\"utf-8\") as f:\n",
-    "        json.dump(inverted_index, f, indent=1)\n",
+    "    with open('index.json', 'w', encoding='utf-8') as f:\n",
+    "        f.write('{\\n')\n",
+    "        items = list(inverted_index.items())\n",
+    "        for i, (token, entries) in enumerate(items):\n",
+    "            f.write(f'  \"{token}\": [\\n')\n",
+    "            for j, entry in enumerate(entries):\n",
+    "                entry_json = json.dumps(entry)\n",
+    "                if j < len(entries) - 1:\n",
+    "                    f.write(f'    {entry_json},\\n')\n",
+    "                else:\n",
+    "                    f.write(f'    {entry_json}\\n')\n",
+    "            if i < len(items) - 1:\n",
+    "                f.write('  ],\\n')\n",
+    "            else:\n",
+    "                f.write('  ]\\n')\n",
+    "        f.write('}\\n')\n",
     "\n",
-    "    print(f\"Positional inverted index saved to {output_json}\")\n",
+    "    print(f\"inverted index saved to {output_json}\")\n",
     "\n",
-    "build_inverted_index('downloaded_pages', 'index.json')\n"
+    "build_inverted_index('downloaded_pages', 'index.json')\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "381f25bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "\n",
+    "def build_text(folder_name):\n",
+    "    documents = {}\n",
+    "    path = os.path.join(os.getcwd(), folder_name)\n",
+    "    for filename in os.listdir(path):\n",
+    "        if not filename.lower().endswith('.html'):\n",
+    "            continue\n",
+    "        doc_id = os.path.splitext(filename)[0]\n",
+    "        file_path = os.path.join(path, filename)\n",
+    "        with open(file_path, 'r', encoding='utf-8') as f:\n",
+    "            html = f.read()\n",
+    "        soup = BeautifulSoup(html, 'html.parser')\n",
+    "        for tag in soup(['script', 'style']):\n",
+    "            tag.decompose()\n",
+    "        text = soup.get_text(separator=' ')\n",
+    "        text = ' '.join(text.split())\n",
+    "        documents[doc_id] = text\n",
+    "\n",
+    "    return documents\n",
+    "\n",
+    "def search(query, documents):\n",
+    "    doc_ids = list(documents.keys())\n",
+    "    corpus = [documents[doc_id] for doc_id in doc_ids]\n",
+    "\n",
+    "    vectorizer = TfidfVectorizer()\n",
+    "    tfidf_matrix = vectorizer.fit_transform(corpus)\n",
+    "\n",
+    "    query_vector = vectorizer.transform([query])\n",
+    "    \n",
+    "    cosine_scores = cosine_similarity(query_vector, tfidf_matrix).flatten()\n",
+    "    feature_names = vectorizer.get_feature_names_out()\n",
+    "    tfidf = {}\n",
+    "    for i, doc_id in enumerate(doc_ids):\n",
+    "        row_vector = tfidf_matrix[i].toarray()[0]\n",
+    "        tfidf[doc_id] = {term: row_vector[j] \n",
+    "                                   for j, term in enumerate(feature_names) if row_vector[j] > 0}\n",
+    "    return {'tfidf': tfidf , 'cosine similarity': dict(zip(doc_ids, cosine_scores))}\n",
+    "\n",
+    "documents = build_text('downloaded_pages')\n",
+    "query = 'I love science fiction books'\n",
+    "results = search(query, documents)\n",
+    "tfidf = results['tfidf']\n",
+    "cosine_sim = results['cosine similarity']\n",
+    "print(f'Cosine Similarity based on query: \"{query}\"\\n')\n",
+    "for doc, score in sorted(cosine_sim.items(), key=lambda x: x[1], reverse=True):\n",
+    "    print(f'{doc}: {score: .4f}')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05df82d2",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
