added print format for cosine sim and tfidf weight values and changed printing of index.json file to match provided example

--- a/project.ipynb
+++ b/project.ipynb
@@ -95,12 +95,14 @@
     "        items = list(inverted_index.items())\n",
     "        for i, (token, entries) in enumerate(items):\n",
     "            f.write(f'  \"{token}\": [\\n')\n",
-    "            for j, entry in enumerate(entries):\n",
-    "                entry_json = json.dumps(entry)\n",
+    "            for j, (doc_id, positions) in enumerate(entries):\n",
+    "                doc_str = f\"{doc_id}\"\n",
+    "                pos_str = \"[\" + \", \".join(map(str, positions)) + \"]\"\n",
+    "                line = f\"        ({doc_str}, {pos_str})\"\n",
     "                if j < len(entries) - 1:\n",
-    "                    f.write(f'    {entry_json},\\n')\n",
-    "                else:\n",
-    "                    f.write(f'    {entry_json}\\n')\n",
+    "                    line += \",\"\n",
+    "                f.write(line + \"\\n\")\n",
+    "\n",
     "            if i < len(items) - 1:\n",
     "                f.write('  ],\\n')\n",
     "            else:\n",
@@ -146,28 +148,46 @@
     "    doc_ids = list(documents.keys())\n",
     "    corpus = [documents[doc_id] for doc_id in doc_ids]\n",
     "\n",
-    "    vectorizer = TfidfVectorizer()\n",
+    "    vectorizer = TfidfVectorizer(token_pattern=r\"(?u)\\b\\w+\\b\")\n",
     "    tfidf_matrix = vectorizer.fit_transform(corpus)\n",
     "\n",
     "    query_vector = vectorizer.transform([query])\n",
     "    \n",
     "    cosine_scores = cosine_similarity(query_vector, tfidf_matrix).flatten()\n",
-    "    feature_names = vectorizer.get_feature_names_out()\n",
-    "    tfidf = {}\n",
-    "    for i, doc_id in enumerate(doc_ids):\n",
-    "        row_vector = tfidf_matrix[i].toarray()[0]\n",
-    "        tfidf[doc_id] = {term: row_vector[j] \n",
-    "                                   for j, term in enumerate(feature_names) if row_vector[j] > 0}\n",
-    "    return {'tfidf': tfidf , 'cosine similarity': dict(zip(doc_ids, cosine_scores))}\n",
     "\n",
+    "    results = []\n",
+    "\n",
+    "    for idx, doc_id in enumerate(doc_ids):\n",
+    "        row = tfidf_matrix[idx].toarray()[0]\n",
+    "\n",
+    "        tfidf_terms = {}\n",
+    "        for token in query.lower().split():\n",
+    "            if token in vectorizer.vocabulary_:\n",
+    "                term_index = vectorizer.vocabulary_[token]\n",
+    "                tfidf_weight = float(row[term_index])\n",
+    "            else:\n",
+    "                tfidf_weight = 0.0\n",
+    "            tfidf_terms[token] = tfidf_weight\n",
+    "        term_str = \", \".join([f\"{term}: {value:.4f}\" for term, value in tfidf_terms.items()])     \n",
+    "        results.append({\n",
+    "            \"doc_id\": doc_id,\n",
+    "            \"cosine\": float(cosine_scores[idx]),\n",
+    "            \"tfidf_str\": term_str\n",
+    "        })\n",
+    "\n",
+    "    results.sort(key=lambda x: x[\"cosine\"], reverse=True)\n",
+    "\n",
+    "    return results\n",
+    "\n",
+    "\n",
+    "query = 'love science fiction, math, and true crime books'\n",
     "documents = build_text('downloaded_pages')\n",
-    "query = 'I love science fiction books'\n",
-    "results = search(query, documents)\n",
-    "tfidf = results['tfidf']\n",
-    "cosine_sim = results['cosine similarity']\n",
-    "print(f'Cosine Similarity based on query: \"{query}\"\\n')\n",
-    "for doc, score in sorted(cosine_sim.items(), key=lambda x: x[1], reverse=True):\n",
-    "    print(f'{doc}: {score: .4f}')\n",
+    "result = search(query, documents)\n",
+    "\n",
+    "for r in result[:6]:\n",
+    "    print(f\"Document {r['doc_id']}: \")\n",
+    "    print(f\"   Cosine Similarity Score: {r['cosine']:.4f}\")\n",
+    "    print(f\"   TF-IDF Weights: {r['tfidf_str']}\\n\")\n",
     "\n"
    ]
   },
