finished processor function and included final output for all functions

--- a/project.ipynb
+++ b/project.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9e2f0f1e",
+   "metadata": {},
+   "source": [
+    "$\\textbf{\\underline{Part 1}}$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "19f10679",
@@ -53,11 +61,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3fb0087a",
+   "metadata": {},
+   "source": [
+    "$\\textbf{\\underline{Part 2.1}}$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2a44799e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inverted index saved to index.json\n"
+     ]
+    }
+   ],
    "source": [
     "from bs4 import BeautifulSoup\n",
     "import json, re, os\n",
@@ -91,7 +115,7 @@
     "                inverted_index[token].append((doc_id, [position]))\n",
     "\n",
     "    with open('index.json', 'w', encoding='utf-8') as f:\n",
-    "        f.write('{\\n')\n",
+    "        f.write('index = {\\n')\n",
     "        items = list(inverted_index.items())\n",
     "        for i, (token, entries) in enumerate(items):\n",
     "            f.write(f'  \"{token}\": [\\n')\n",
@@ -116,11 +140,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2dfb75f0",
+   "metadata": {},
+   "source": [
+    "$\\textbf{\\underline{Part 2.2}}$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "381f25bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document 69F2AF4B-666C-47A0-AE3E-E7199D484D9C: \n",
+      "   Cosine Similarity Score: 0.5537\n",
+      "   TF-IDF Weights: love: 0.0547, science: 0.1409, fiction,: 0.0000, math,: 0.0000, and: 0.2189, true: 0.0000, crime: 0.3009, books: 0.2189\n",
+      "\n",
+      "Document 046DD200-AA15-44BC-8C14-BDED598B0CEF: \n",
+      "   Cosine Similarity Score: 0.4464\n",
+      "   TF-IDF Weights: love: 0.0550, science: 0.1417, fiction,: 0.0000, math,: 0.0000, and: 0.2201, true: 0.0000, crime: 0.0756, books: 0.2201\n",
+      "\n",
+      "Document CE075531-3A01-4F81-BCF9-9B4C98E3DD67: \n",
+      "   Cosine Similarity Score: 0.4431\n",
+      "   TF-IDF Weights: love: 0.0546, science: 0.1407, fiction,: 0.0000, math,: 0.0000, and: 0.2185, true: 0.0000, crime: 0.0751, books: 0.2185\n",
+      "\n",
+      "Document F082154D-2E0D-4854-A66A-AF50AD4B108C: \n",
+      "   Cosine Similarity Score: 0.4378\n",
+      "   TF-IDF Weights: love: 0.0540, science: 0.1390, fiction,: 0.0000, math,: 0.0000, and: 0.2159, true: 0.0000, crime: 0.0742, books: 0.2159\n",
+      "\n",
+      "Document DB449E17-F4AC-47AB-B714-33C0541FDFEB: \n",
+      "   Cosine Similarity Score: 0.4354\n",
+      "   TF-IDF Weights: love: 0.0537, science: 0.1382, fiction,: 0.0000, math,: 0.0000, and: 0.2147, true: 0.0000, crime: 0.0738, books: 0.2147\n",
+      "\n",
+      "Document 176B48E3-5E9A-4460-9EFD-A44EB289F886: \n",
+      "   Cosine Similarity Score: 0.3777\n",
+      "   TF-IDF Weights: love: 0.0892, science: 0.1149, fiction,: 0.0000, math,: 0.0000, and: 0.1785, true: 0.0000, crime: 0.0613, books: 0.1785\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
@@ -150,9 +213,7 @@
     "\n",
     "    vectorizer = TfidfVectorizer(token_pattern=r\"(?u)\\b\\w+\\b\")\n",
     "    tfidf_matrix = vectorizer.fit_transform(corpus)\n",
-    "\n",
     "    query_vector = vectorizer.transform([query])\n",
-    "    \n",
     "    cosine_scores = cosine_similarity(query_vector, tfidf_matrix).flatten()\n",
     "\n",
     "    results = []\n",
@@ -170,9 +231,9 @@
     "            tfidf_terms[token] = tfidf_weight\n",
     "        term_str = \", \".join([f\"{term}: {value:.4f}\" for term, value in tfidf_terms.items()])     \n",
     "        results.append({\n",
-    "            \"doc_id\": doc_id,\n",
-    "            \"cosine\": float(cosine_scores[idx]),\n",
-    "            \"tfidf_str\": term_str\n",
+    "            'doc_id': doc_id,\n",
+    "            'cosine': float(cosine_scores[idx]),\n",
+    "            'tfidf_str': term_str\n",
     "        })\n",
     "\n",
     "    results.sort(key=lambda x: x[\"cosine\"], reverse=True)\n",
@@ -185,15 +246,152 @@
     "result = search(query, documents)\n",
     "\n",
     "for r in result[:6]:\n",
-    "    print(f\"Document {r['doc_id']}: \")\n",
-    "    print(f\"   Cosine Similarity Score: {r['cosine']:.4f}\")\n",
-    "    print(f\"   TF-IDF Weights: {r['tfidf_str']}\\n\")\n",
+    "    print(f'Document {r['doc_id']}: ')\n",
+    "    print(f'   Cosine Similarity Score: {r['cosine']:.4f}')\n",
+    "    print(f'   TF-IDF Weights: {r['tfidf_str']}\\n')\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "b3094dd4",
+   "metadata": {},
+   "source": [
+    "$\\textbf{\\underline{Part 3}}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0174d7cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * Serving Flask app '__main__'\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
+      " * Running on http://127.0.0.1:5000\n",
+      "Press CTRL+C to quit\n",
+      "127.0.0.1 - - [01/Dec/2025 11:52:02] \"GET /process?file=queries.csv HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output saved to results.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import threading\n",
+    "from flask import Flask, request, send_file, jsonify\n",
+    "import pandas as pd\n",
+    "import io, os\n",
+    "\n",
+    "import requests\n",
+    "\n",
+    "top_k = 4\n",
+    "documents = build_text('downloaded_pages')\n",
+    "\n",
+    "app = Flask(__name__)\n",
+    "\n",
+    "\n",
+    "@app.route(\"/process\", methods=[\"GET\"])\n",
+    "def processor():\n",
+    "    try:\n",
+    "        filename = request.args.get(\"file\")\n",
+    "        if not filename:\n",
+    "            return jsonify({\"error\": \"Missing 'file' parameter\"}), 400\n",
+    "\n",
+    "        csv_path = filename\n",
+    "        if not os.path.exists(csv_path):\n",
+    "            return jsonify({\"error\": f\"File not found: {csv_path}\"}), 404\n",
+    "\n",
+    "        try:\n",
+    "            df = pd.read_csv(csv_path, dtype=str)\n",
+    "        except Exception as error:\n",
+    "            return jsonify({\"error\": f\"CSV read error: {str(error)}\"}), 400\n",
+    "        required = {\"query_id\", \"query_text\"}\n",
+    "        if not required.issubset(df.columns):\n",
+    "            return jsonify({\"error\": \"CSV must contain query_id and query_text\"}), 400\n",
+    "\n",
+    "        output_rows = []\n",
+    "\n",
+    "        for _, row in df.iterrows():\n",
+    "\n",
+    "            qid = row.get(\"query_id\", \"\").strip()\n",
+    "            qtext = row.get(\"query_text\", \"\").strip()\n",
+    "            if not qid:\n",
+    "                return jsonify({\"error\": \"query_id cannot be empty\"}), 400\n",
+    "            if not qtext:\n",
+    "                return jsonify({\"error\": f\"Empty query_text for query_id {qid}\"}), 400\n",
+    "            try:\n",
+    "                ranked = search(qtext, documents)\n",
+    "            except Exception as e:\n",
+    "                return jsonify({\n",
+    "                    \"error\": f\"Search failed for query_id {qid}: {str(e)}\"\n",
+    "                }), 500\n",
+    "            for rank, item in enumerate(ranked[:top_k], start=1):\n",
+    "                output_rows.append({\n",
+    "                    \"query_id\": qid,\n",
+    "                    \"rank\": rank,\n",
+    "                    \"document_id\": item[\"doc_id\"]\n",
+    "                })\n",
+    "        out_df = pd.DataFrame(output_rows)\n",
+    "\n",
+    "        out_buffer = io.StringIO()\n",
+    "        out_df.to_csv(out_buffer, index=False)\n",
+    "        out_buffer.seek(0)\n",
+    "\n",
+    "        output_name = filename.replace(\".csv\", \"_results.csv\")\n",
+    "\n",
+    "        return send_file(\n",
+    "            io.BytesIO(out_buffer.getvalue().encode(\"utf-8\")),\n",
+    "            mimetype=\"text/csv\",\n",
+    "            as_attachment=True,\n",
+    "            download_name=output_name\n",
+    "        )\n",
+    "\n",
+    "    except Exception as fatal:\n",
+    "        return jsonify({\"error\": f\"Unexpected server error: {str(fatal)}\"}), 500\n",
+    "\n",
+    "\n",
+    "def run_app():\n",
+    "    app.run(port=5000)\n",
+    "thread = threading.Thread(target=run_app)\n",
+    "thread.start()\n",
+    "\n",
+    "url = 'http://127.0.0.1:5000/process?file=queries.csv'\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "if not response.ok:\n",
+    "    print('Error: ', response.text)\n",
+    "else:\n",
+    "    with open(\"results.csv\", \"wb\") as f:\n",
+    "        f.write(response.content)\n",
+    "\n",
+    "    print(\"Output saved to results.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "05df82d2",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11d875c3",
    "metadata": {},
    "source": []
   }
