worked up to design part of project report

--- a/project.ipynb
+++ b/project.ipynb
@@ -387,11 +387,92 @@
    "cell_type": "markdown",
    "id": "05df82d2",
    "metadata": {},
-   "source": []
+   "source": [
+    "$\\textbf{\\underline{Abstract}}$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "11d875c3",
+   "metadata": {},
+   "source": [
+    "$\\text{This project includes three main parts: a web crawler, an inverted index builder and searching algorithm, and a processing algorithm for Top-K ranked retrieval. The development process}$\n",
+    "$\\text{involved an incremental approach, where each part of the project was developed and completed before moving on to the next part. Additionally, initial testing was also done before moving}$\n",
+    "$\\text{to other parts of the project to ensure a previously developed function works correctly. Once all parts were completed, more internal testing (not reflected on github repository) was done}$\n",
+    "$\\text{to ensure all parts worked correctly, especially with large inputs. Throughout the development process, dedicated days to debugging and understanding a part of the project were allocated}$\n",
+    "$\\text{to ensure a more smoother and efficient development.}$\n",
+    "\n",
+    "$\\text{If more time were to be dedicaated to this project, the next steps in development would be adding query spelling-correction and suggestions, vector embedding representation, and distributed}$\n",
+    "$\\text{crawling. This would improve search accuracy by correcting typos and offering alternative terms, enable retrieval of contextually similar documents, and enhance scalability through large-scale,}$ \n",
+    "$\\text{continuous updates to the web crawler.}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5287e037",
+   "metadata": {},
+   "source": [
+    "$\\textbf{\\underline{Overview}}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a40addab",
+   "metadata": {},
+   "source": [
+    "$\\text{The solution outline is as follows:}$\n",
+    "\n",
+    "$\\text{• Web Crawler - Used a scrapy crawler with CrawlerProcess; starts at a base URL and recursively follows links up to a specified depth and amount of .html files need} \\\\ \n",
+    "\\text{}\\\\\n",
+    "\\text{• Indexer - Used BeautifulSoup to extract the text from the folder, tokenized each term within the folder, and built an positional inverted index as a .json file. The search} \\\\\n",
+    "\\text{algorithm calculates the cosine similarity and the TF-IDF weights of each term in comparison to the corpus for a specified query. } \\\\\n",
+    "\\text{} \\\\\n",
+    "\\text{• Processor - A Flask based processor with Top-K ranked retrieval that validates query text and query IDs within the queries.csv file and outputs a results.csv file containing} \\\\ \n",
+    "\\text{query ID, rank, and document ID.}$ \n",
+    "\n",
+    "$\\text{Based on this solution outline, the following literatures were used to gain information about possible implementation methods:}$ \n",
+    "\n",
+    "$\\text{• [Scrapy Documentation](https://docs.scrapy.org/en/latest/topics/api.html): Used to learn about a scrapy crawler through CrawlerProcess. Provided useful} \\\\\n",
+    "\\text{information on relevant custom settings and functions that can be used tio create a web crawler.} \\\\\n",
+    "\\text{} \\\\\n",
+    "\\text{• [Flask Documentation](https://flask.palletsprojects.com/en/stable/api/): Used to learn about creating a Flask application and setting up a GET request for the project's processor} \\\\\n",
+    "\\text{algorithm. It also provided information on using send file to save a csv file into a user's directory.}\n",
+    "\\text{} \\\\\n",
+    "\\text{• [Sklearn Documentation](https://scikit-learn.org/stable/api/sklearn.html): Used to learn more about calculating TFIDF weights and cosine similarity scores.}$\n",
+    "\n",
+    "$\\text{The system will use Scrapy based web crawler to gather html documents and store them in a folder. This folder will later be retrieved by a function that builds an} \\\\$\n",
+    "$\\text{posotional inverted index and stores the index in a json file. A query will be given to a search function that calculate its cosine similarity to each document and } \\\\ $\n",
+    "$\\text{TFIDF weights, relative to the corpus. These calculation will then be used to display Top-K ranked retrieved documents after each query ID and query text is processed} \\\\ $\n",
+    "$\\text{and error checked.}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9133d0d6",
+   "metadata": {},
+   "source": [
+    "$\\textbf{\\underline{Design}}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "339ed53b",
+   "metadata": {},
+   "source": [
+    "$\\text{Based on a specified depth and max pages, the system will be able to scrap through a specific website and gather a set of html documents into a folder. The greater the depth specified, the}$\n",
+    "$\\text{deeper the crawler will go through each link found in each html document. Based on these results, the folder of html files is used to create a positional inverted index with document IDs,}$\n",
+    "$\\text{terms and positions in which each term exists in a document. Furthermore, the folder of html files is converted into a corpus with a python dictionary and used to build a search algorithm. This}$\n",
+    "$\\text{search algorithm accepts a query and calculates its cosine similarity and TFIDF weights of each term within the query, relative to each document. These results are used within a processing algorithm}$\n",
+    "$\\text{that provides error checking and query validation, and Top K ranked retrieval. This processing function uses the search algoirhtm on a queries.csv file, which contains query text and query IDs and}$\n",
+    "$\\text{provides the Top K ranked retrieval results through a results.csv file containing document IDs, query IDs, and ranks for each document.}$\n",
+    "\n",
+    "$\\text{The following diagram was created to showcase the interactions between each project component:}$\n",
+    "![Interactions Diagram](images/interactions.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a555e6a",
    "metadata": {},
    "source": []
   }
